# xbot2_interface

./: .gitignore  .travis.yml  CMakeLists.txt  NOTICE  README.md  TODO.md  cheatsheet.md  main.cpp  pyproject.toml
.github/workflows/: build-and-test-ros2-jammy.yml  build-and-test-ros2-noble.yml
cmake/: GenerateDeb.cmake  xbot2_interfaceConfig.cmake.in
docker/: build.bash  test.bash
docker/focal-ros1/: Dockerfile
docker/focal-ros1/scripts/: build.bash  test.bash
docker/jammy-ros2/: Dockerfile  compose.yaml
docker/jammy-ros2/scripts/: build.bash  test.bash
docker/noble-ros2/: Dockerfile  compose.yaml
docker/noble-ros2/scripts/: build.bash  test.bash
examples/: CMakeLists.txt  api_examples.ipynb  nb_location.py
examples/cpp/: common.h  ik.cpp  payload_link.cpp  print_model.cpp  reduced_model.cpp
examples/jupyter/: api_examples.ipynb
examples/resources/: mobile_manipulator_3dof.urdf
include/xbot2_interface/: chain.h  collision.h  force_torque.h  gripper.h  imu.h  joint.h  logger.h  plugin.h  robotinterface2.h  sensor.h  state_interface.h  types.h  xbotinterface2.h
include/xbot2_interface/common/: control_mode.h  dynamic_loading.h  plugin.h  state_interface.h  types.h  utils.h  visibility.h
include/xbot2_interface/impl/: config_options.hxx
pinocchio/: CMakeLists.txt  modelinterface2_pin.cpp  modelinterface2_pin.h  modelinterface2_pin_aba.cpp  modelinterface2_pin_ccrba.cpp  modelinterface2_pin_crba.cpp  modelinterface2_pin_rnea.cpp
python/: CMakeLists.txt  __init__.py  pyaffine3.cpp  pyxbot2_collision.cpp  pyxbot2_interface.cpp
rbdl/: CMakeLists.txt  modelinterface2_rbdl.cpp  modelinterface2_rbdl.h
ros/: CMakeLists.txt  config_from_param.hpp  robotinterface2_ros.cpp  robotinterface2_ros.h
ros2/: CMakeLists.txt  config_from_param.hpp  robotinterface2_ros.cpp  robotinterface2_ros.h
src/: chain.cpp  force_torque.cpp  gripper.cpp  imu.cpp  joint.cpp  joint.h  logger.cpp  modelinterface2_pin.cpp  modelinterface2_pin.h  robotinterface2.cpp  sensor.cpp  state_interface.cpp  types.cpp  utils.cpp  xbotinterface2.cpp  xbotinterface2.h
src/collision/: CMakeLists.txt  collision.cpp  collision.hxx
src/impl/: chain.hxx  force_torque.hxx  gripper.hxx  imu.hxx  joint.hxx  load_object.h  robotinterface2.hxx  sensor.hxx  state.hxx  utils.h  xbotinterface2.hxx
test/: CMakeLists.txt
test/resources/: centauro_capsule.srdf  centauro_capsule.urdf  collision_test_robot.urdf.xml  test_robot_no_world_joint.urdf
test/src/: common.h  eigen_ref_calls_free.cpp  test_collision.cpp  test_kinematics.cpp  test_memory.cpp  test_parametrization.cpp  test_parser.cpp  test_robot.cpp
